actualizaf aplicamo android, para errores, de reportado por cliente

--- a/v4posme_maui/Views/Items/ItemDetailPage.xaml
+++ b/v4posme_maui/Views/Items/ItemDetailPage.xaml
@@ -74,7 +74,7 @@
             </dx:DXBorder>
             <dx:DXBorder Style="{StaticResource PropertyBorder}">
                 <dx:DXStackLayout Orientation="Vertical">
-                    <Label Text="Cantidad: " FontAttributes="Bold" FontSize="18" />
+                    <Label Text="Cantidad inicial: " FontAttributes="Bold" FontSize="18" />
                     <Label Text="{Binding Item.Quantity}" FontSize="18" />
                 </dx:DXStackLayout>
             </dx:DXBorder>
