--- a/v4posme_maui/Views/Items/ItemEditPage.xaml
+++ b/v4posme_maui/Views/Items/ItemEditPage.xaml
@@ -142,7 +142,7 @@
                                 IsReadOnly="True"
                                 StartIcon="quantity"
                                 Text="{Binding Quantity}"
-                                LabelText="Cantidad" />
+                                LabelText="Cantidad inicial" />
                         </dxdf:DataFormCustomItem>
                     </dxdf:DataFormView>
                     <dx:DXBorder.Triggers>
