actualizacion en la vision del porete mobile

--- a/v4posme_maui/Views/More/ReporteVenta/ReporteVentaPage.xaml
+++ b/v4posme_maui/Views/More/ReporteVenta/ReporteVentaPage.xaml
@@ -86,6 +86,7 @@
 
                             <Label x:Name="reporteFecha"
                                 FontSize="17"
+                                Text="{Binding ReporteFecha}"
                                 HorizontalTextAlignment="Center"
                                 FontAttributes="Bold" />
 
